added img manager

--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
       </section>
       <section class="get-order">
         <div class="get-order__container _container">
-          <!-- <div class="get-started__title title">
-            Как начать получать заказы?
-          </div> -->
+          <div class="get-started__title title">
+            Как это работает?
+          </div>
           <div class="get-order__items">
             <div class="get-order__item order-item">
               <div class="order-item__desc">
@@ -228,8 +228,8 @@
                   Для бригадира со своей бригадой:
                 </div>
               </div>
-              <div class="order-item__img _ibg">
-                <img src="img/manager1.png" alt="Фото 1">
+              <div class="order-item__img-width _ibg">
+                <img src="img/manager1.jpg" alt="Фото 1">
               </div>
             </div>
             <div class="get-order__item order-item">
@@ -253,7 +253,7 @@
                 </div>
               </div>
               <div class="order-item__img _ibg">
-                <img src="img/manager3.png" alt="Фото 3">
+                <img src="img/manager3.jpg" alt="Фото 3">
               </div>
             </div>
             <div class="get-order__item order-item">
@@ -266,7 +266,7 @@
                 </div>
               </div>
               <div class="order-item__img _ibg">
-                <img src="img/advantages.jpg" alt="Фото 4">
+                <img src="img/manager4.jpg" alt="Фото 4">
               </div>
             </div>
           </div>
