--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
                 напоминает о правилах и
                 критериях работы!
               </div>
-              <a href="#image2" class="order-item__img order-item__img-left _ibg popup-link">
-                <img src="img/manager2.jpg" alt="">
-              </a>
             </div>
+            <a href="#image2" class="order-item__img order-item__img-left _ibg popup-link">
+              <img src="img/manager2.jpg" alt="">
+            </a>
           </div>
           <div class="get-order__item order-item">
             <div class="order-item__number">
@@ -291,15 +291,17 @@
             </div>
             <div class="order-item__description order-item__description-left">
               <div class="order-item__text">
-                Количество необходимых
-                специалистов, материал, нормы
-                по дням сервис рассчитает
-                автоматически
+                Вы сами принимаете решение
+                УЧАСТВОВАТЬ в конкретном
+                заказе! Перед КАЖДЫМ
+                заказом сервис снова
+                напоминает о правилах и
+                критериях работы!
               </div>
-              <a href="#image-servise-auto" class="order-item__img order-item__img-left _ibg popup-link">
-                <img src="img/servise-auto.jpg" alt="">
-              </a>
             </div>
+            <a href="#image-servise-auto" class="order-item__img order-item__img-left _ibg popup-link">
+              <img src="img/servise-auto.jpg" alt="">
+            </a>
           </div>
           <div class="get-order__item order-item">
             <div class="order-item__number">
@@ -331,10 +333,10 @@
                 выплата отображается в личном
                 кабинете бригадира.
               </div>
-              <a href="#image4" class="order-item__img order-item__img-left _ibg popup-link">
-                <img src="img/manager4.jpg" alt="">
-              </a>
             </div>
+            <a href="#image4" class="order-item__img order-item__img-left _ibg popup-link">
+              <img src="img/manager4.jpg" alt="">
+            </a>
           </div>
           <div class="get-order__item order-item">
             <div class="order-item__number">
@@ -599,9 +601,9 @@
   <div id="getstarted" class="popup">
     <div class="popup__body">
       <div class="popup__content popup__content_image">
-        <a href="#header" class="popup__close close-popup">
+        <!-- <a href="#header" class="popup__close close-popup">
           <img src="img/icons/close.png" alt="">
-        </a>
+        </a> -->
         <div class="popup__image">
           <img src="img/get-started.jpg" alt="">
         </div>
@@ -611,9 +613,9 @@
   <div id="image1" class="popup">
     <div class="popup__body">
       <div class="popup__content popup__content_image">
-        <a href="#header" class="popup__close close-popup">
+        <!-- <a href="#header" class="popup__close close-popup">
           <img src="img/icons/close.png" alt="">
-        </a>
+        </a> -->
         <div class="popup__image popup__image-width">
           <img src="img/manager1.jpg" alt="">
         </div>
@@ -623,9 +625,9 @@
   <div id="image2" class="popup">
     <div class="popup__body">
       <div class="popup__content popup__content_image">
-        <a href="#header" class="popup__close close-popup">
+        <!-- <a href="#header" class="popup__close close-popup">
           <img src="img/icons/close.png" alt="">
-        </a>
+        </a> -->
         <div class="popup__image">
           <img src="img/manager2.jpg" alt="">
         </div>
@@ -635,9 +637,9 @@
   <div id="image3" class="popup">
     <div class="popup__body">
       <div class="popup__content popup__content_image">
-        <a href="#header" class="popup__close close-popup">
+        <!-- <a href="#header" class="popup__close close-popup">
           <img src="img/icons/close.png" alt="">
-        </a>
+        </a> -->
         <div class="popup__image">
           <img src="img/manager3.jpg" alt="">
         </div>
@@ -647,9 +649,9 @@
   <div id="image-servise-auto" class="popup">
     <div class="popup__body">
       <div class="popup__content popup__content_image">
-        <a href="#header" class="popup__close close-popup">
+        <!-- <a href="#header" class="popup__close close-popup">
           <img src="img/icons/close.png" alt="">
-        </a>
+        </a> -->
         <div class="popup__image">
           <img src="img/servise-auto.jpg" alt="">
         </div>
@@ -659,9 +661,9 @@
   <div id="image4" class="popup">
     <div class="popup__body">
       <div class="popup__content popup__content_image">
-        <a href="#header" class="popup__close close-popup">
+        <!-- <a href="#header" class="popup__close close-popup">
           <img src="img/icons/close.png" alt="">
-        </a>
+        </a> -->
         <div class="popup__image">
           <img src="img/manager4.jpg" alt="">
         </div>
